force-app/main/default/objects/Operation_Check_Master_Data__c/Operation_Check_Master_Data__c.object-meta.xml
<CustomObject>
    <description>This object captures the operation checks master data information.</description>
    <label>Operation Check Master Data</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Operation_Item_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Check Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>