force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Date__c</fullName>
    <description>Future date when this record becomes active</description>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>