force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Build_Station_ID__c.field-meta.xml
<CustomField>
    <fullName>Build_Station_ID__c</fullName>
    <label>Build Station ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>