force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Bus_Mode__c.field-meta.xml
<CustomField>
    <fullName>Bus_Mode__c</fullName>
    <label>Bus Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode</valueSetName>
    </valueSet>
</CustomField>