force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>