force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date this record is set to not active</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>