force-app/main/default/objects/Operation_Check_Master_Data__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field indicates whether the operation check item is still valid</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>