force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Op_Description__c.field-meta.xml
<CustomField>
    <fullName>Op_Description__c</fullName>
    <description>Created to check the description in rich text format.</description>
    <label>Op_Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>