force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Operation_Description__c.field-meta.xml
<CustomField>
    <fullName>Operation_Description__c</fullName>
    <description>Converted text to rich text</description>
    <label>Operation Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>