force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Operation_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Operation_Sequence_Number__c</fullName>
    <label>Operation Sequence Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>