force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Value_Description__c.field-meta.xml
<CustomField>
    <fullName>Value_Description__c</fullName>
    <label>Value Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>