force-app/main/default/objects/Operation_Check_Master_Data__c/fields/Value_Required_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Value_Required_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Required Indicator</label>
    <type>Checkbox</type>
</CustomField>