force-app/main/default/objects/Operation_Check_Master_Data__c/recordTypes/Customer_Job.recordType-meta.xml
<RecordType>
    <fullName>Customer_Job</fullName>
    <active>true</active>
    <description>Customer specific jobs.</description>
    <label>Customer Job</label>
</RecordType>