force-app/main/default/objects/Operation_Check_Master_Data__c/recordTypes/QA_Check.recordType-meta.xml
<RecordType>
    <fullName>QA_Check</fullName>
    <active>true</active>
    <description>QA checks Jobs</description>
    <label>QA Check</label>
</RecordType>