force-app/main/default/objects/Operation_Check_Master_Data__c/recordTypes/Standard_Job.recordType-meta.xml
<RecordType>
    <fullName>Standard_Job</fullName>
    <active>true</active>
    <description>Production job.</description>
    <label>Standard Job</label>
</RecordType>