force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Active_past_dates_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_past_dates_not_allowed</fullName>
    <active>true</active>
    <description>Restricted past active dates from creation and updation..</description>
    <errorConditionFormula>AND(
OR(ISCHANGED(Active_Date__c),ISNEW()),
NOT(ISBLANK(Active_Date__c)),
Active_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Please select a current or future date for the Active and Inactive Date.</errorMessage>
</ValidationRule>