force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Build_station_Changes_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Build_station_Changes_not_allowed</fullName>
    <active>false</active>
    <description>Build Station cannot be change. Set current to inactive and create new Op Chk</description>
    <errorConditionFormula>not(ISBLANK( Build_Station_ID__c )) &amp;&amp;  PRIORVALUE(Build_Station_ID__c)  &lt;&gt;  Build_Station_ID__c</errorConditionFormula>
    <errorMessage>Changes to Build Station not allowed. Set current Op Check to Inactive and create a new Op Chk</errorMessage>
</ValidationRule>