force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Bus_Mode_Changes_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Bus_Mode_Changes_not_allowed</fullName>
    <active>false</active>
    <description>Bus Mode cannot be change. Set current to inactive and create new Op Chk</description>
    <errorConditionFormula>not(ISBLANK( text( Bus_Mode__c ))) &amp;&amp;  text(PRIORVALUE(Bus_Mode__c))  &lt;&gt;  text(Bus_Mode__c)</errorConditionFormula>
    <errorMessage>Changes to Bus Mode not allowed. Set current Op Check to Inactive and create a new Op Chk</errorMessage>
</ValidationRule>