force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Check_Transmission_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Transmission_selected</fullName>
    <active>false</active>
    <description>None cannot be used as a transmission type</description>
    <errorConditionFormula>text(Transmission__c)  = &apos;None&apos;</errorConditionFormula>
    <errorMessage>Do not use None as a Transmission Op-Chk</errorMessage>
</ValidationRule>