force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Inactive_past_dates_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_past_dates_not_allowed</fullName>
    <active>true</active>
    <description>Restricted past inactive dates from creation and updation..</description>
    <errorConditionFormula>AND(
OR(ISCHANGED(Inactive_Date__c),ISNEW()),
NOT(ISBLANK(Inactive_Date__c)),
Inactive_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Please select a current or future date for the Active and Inactive Date.</errorMessage>
</ValidationRule>