force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Operation_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Operation_Description_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Operation_Description__c)</errorConditionFormula>
    <errorMessage>Please enter the Operation Description Value</errorMessage>
</ValidationRule>