force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Transmission_Changes_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Transmission_Changes_not_allowed</fullName>
    <active>false</active>
    <description>Transmission cannot be change. Set current to inactive and create new Op Chk</description>
    <errorConditionFormula>not(ISBLANK( text(Transmission__c ))) &amp;&amp;  text(PRIORVALUE(Transmission__c))  &lt;&gt;  text(Transmission__c)</errorConditionFormula>
    <errorMessage>Changes to Transmission not allowed. Set current Op Check to Inactive and create a new Op Chk</errorMessage>
</ValidationRule>