force-app/main/default/objects/Operation_Check_Master_Data__c/validationRules/Value_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Description</fullName>
    <active>false</active>
    <description>Value Description required when Required Value</description>
    <errorConditionFormula>ISBLANK( Value_Description__c )  &amp;&amp;  Value_Required_Indicator__c</errorConditionFormula>
    <errorMessage>Please enter a Value description when setting Value Required</errorMessage>
</ValidationRule>