force-app/main/default/objects/Operation_Check_Master_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bus_Mode__c</columns>
    <columns>Transmission__c</columns>
    <columns>Value_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>